--- a/templates/anime_downloader_linkkf_request.html
+++ b/templates/anime_downloader_linkkf_request.html
@@ -93,6 +93,8 @@
 
         function make_program(data) {
             current_data = data;
+            {#$("body").css({"background":"url("+data.poster_url+")"})#}
+
             // console.log('current_data:: ', data)
             str = "";
             tmp = '<div class="form-inline w-100">';
