--- a/templates/anime_downloader_ohli24_setting.html
+++ b/templates/anime_downloader_ohli24_setting.html
@@ -34,10 +34,10 @@
     {{ macros.setting_checkbox('ohli24_auto_mode_all', '에피소드 모두 받기', value=arg['ohli24_auto_mode_all'], desc=['On : 이전 에피소드를 모두 받습니다.', 'Off : 최신 에피소드만 받습니다.']) }}
   {{ macros.m_tab_content_end() }}
 
-  {{ macros.m_tab_content_start('action', false) }}
-    {{ macros.setting_button([['global_one_execute_sub_btn', '1회 실행']], left='1회 실행' ) }}
-    {{ macros.setting_button([['global_reset_db_sub_btn', 'DB 초기화']], left='DB정리' ) }}
-  {{ macros.m_tab_content_end() }}
+{#  {{ macros.m_tab_content_start('action', false) }}#}
+{#    {{ macros.setting_button([['global_one_execute_sub_btn', '1회 실행']], left='1회 실행' ) }}#}
+{#    {{ macros.setting_button([['global_reset_db_sub_btn', 'DB 초기화']], left='DB정리' ) }}#}
+{#  {{ macros.m_tab_content_end() }}#}
 
   </div><!--tab-content-->
   </form>
