--- a/templates/anime_downloader_ohli24_search.html
+++ b/templates/anime_downloader_ohli24_search.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% block content %}
-    <!--<div id="preloader"></div>-->
+
     <div id="preloader" class="loader">
         <div class="loader-inner">
             <div class="loader-line-wrap">
@@ -53,11 +53,7 @@
             <form id="screen_movie_list_form">
                 <div id="screen_movie_list" class="container"></div>
             </form>
-            <div class="text-center">
-                <div id="spinner" class="spinner-border" role="status">
-                    <span class="sr-only">Loading...</span>
-                </div>
-            </div>
+
             <form id="program_auto_form">
                 <div id="episode_list"></div>
             </form>
@@ -139,24 +135,24 @@
                 cache: false,
                 dataType: "json",
                 success: (ret) => {
-                    current_screen_movie_data = ret
+                    let current_screen_movie_data = ret
                     console.log('ret::>', ret)
 
                     if (current_screen_movie_data !== '') {
                         if (type === "ing") {
                             make_airing_list(ret.data, page)
-                            observer.observe();
+                            {#observer.observe();#}
                         } else if (type === "fin") {
                             make_screen_movie_list(ret.data, page)
-                            observer.observe();
+                            {#observer.observe();#}
                         } else if (type === "theater") {
                             make_screen_movie_list(ret.data, page)
-                            observer.observe();
+                            {#observer.observe();#}
                         } else {
                             make_screen_movie_list(ret.data, page)
                         }
-                        div_visible = true
-                        console.log(div_visible)
+                        {#div_visible = true#}
+                        {#console.log(div_visible)#}
                     }
                     next_page = page + 1
                 }
@@ -341,7 +337,6 @@
             // }
             $("#input_search").keydown(function (key) {
                 if (key.keyCode === 13) {
-                    // alert("엔터키를 눌렀습니다.");
                     $("#btn_search").trigger("click");
                 }
             })
